--- a/Locales/de/main.html
+++ b/Locales/de/main.html
@@ -143,7 +143,8 @@
     <input type="hidden" name="cityId" value="0"/>
     <div class="label">
         <span class="label">1</span>
-        <span class="host"><input type="text" id="city" name="city" class="dest" value="Stadt" defValue="Stadt" suggest="yes" suggest_value='[{city:"Kiev", cityId:0, country:"Ukraine",countryId:1}]' nosubmit/>
+        <span class="host"><input type="text" name="city" id="city" class="dest" placeholder="Stadt"/>
+            <!--<input type="text" id="city" name="city" class="dest" value="Stadt" defValue="Stadt" suggest="yes" suggest_value='[{city:"Kiev", cityId:0, country:"Ukraine",countryId:1}]' nosubmit/>-->
             <span class="diags">Leider haben wir keine Angebote für diese Stadt</span>
             <span class="diags" id="error_city">Falsche Namen der Stadt</span>
         </span>
@@ -169,7 +170,8 @@
 
     <div class="label">
         <span class="label">Reiseziel</span>
-        <span class="host"><input type="text" id="city" name="city" class="dest" value="Stadt" defValue="Stadt" suggest="yes" suggest_value='[{city:"Kiev", cityId:0, country: "Ukraine"}]' nosubmit/>
+        <span class="host"><input type="text" name="city" id="city" class="dest" placeholder="Stadt"/>
+         <!--<input type="text" id="city" name="city" class="dest" value="Stadt" defValue="Stadt" suggest="yes" suggest_value='[{city:"Kiev", cityId:0, country: "Ukraine"}]' nosubmit/>-->
         <span class="diags">Leider haben wir keine Angebote für diese Stadt</span>
          <span class="diags" id="error_city">Falsche Namen der Stadt</span>
 	    </span>
