--- a/Locales/ru/main.html
+++ b/Locales/ru/main.html
@@ -145,7 +145,9 @@
 
     <div class="label">
         <span class="label">1</span>
-        <span class="host"><input type="text" id="city" name="city" class="dest" value="Город" defValue="Город" suggest="yes" suggest_value='[{city:"Kiev", cityId:0, country:"Ukraine", countryId:1}]' nosubmit/>
+        <span class="host">
+            <!--<input type="text" id="city" name="city" class="dest" value="Город" defValue="Город" suggest="yes" suggest_value='[{city:"Kiev", cityId:0, country:"Ukraine", countryId:1}]' nosubmit/>-->
+            <input type="text" name="city" id="city" class="dest" placeholder="Город"/>
         <span class="diags" id="error_city">
             Некорректное имя города.</span>
         <span class="diags">Извините, у нас нет предложений для этого города.</span>
@@ -173,7 +175,8 @@
 
     <div class="label">
         <span class="label">Город</span>
-        <span class="host"><input type="text" id="city" name="city" class="dest" value="Город" defValue="Город" suggest="yes" suggest_value='[{city:"Kiev", cityId:0}]' nosubmit/>
+        <span class="host"><input type="text" name="city" id="city" class="dest" placeholder="Город"/>
+        <!--<input type="text" id="city" name="city" class="dest" value="Город" defValue="Город" suggest="yes" suggest_value='[{city:"Kiev", cityId:0}]' nosubmit/>-->
             <span class="diags">Извините, у нас нет предложений для этого города.</span>
         <span class="diags" id="error_city">Вы ввели некорректное имя города. Проверьте его пожалуйста!</span>
         </span>
